<resources>
    <string name="app_name">Simple Lifts</string>
    <string name="bench">Bench Press</string>
    <string name="squat">Squat</string>
    <string name="deadlift">Deadlift</string>
    <string name="ohp">Overhead Press</string>
    <string name="row">Row</string>
    <string name="db">Dumbbell</string>
    <string name="bb">Barbell</string>
    <string name="hexbar">Hex Bar</string>
    <string name="flat">Flat</string>
    <string name="incline">Incline</string>
    <string name="decline">Decline</string>
    <string name="standing">Standing</string>
    <string name="seated">Seated</string>
    <string name="lowbar">Low</string>
    <string name="highbar">High</string>
    <string name="frontsquat">Front</string>
    <string name="conventional">Conventional</string>
    <string name="sumo">Sumo</string>
    <string name="overhand">Overhand</string>
    <string name="neutral">Neutral</string>
    <string name="underhand">Underhand</string>
    <string name="weight">Weight</string>
    <string name="x">X</string>
    <string name="reps">Reps</string>
    <string name="difficulty">Difficulty</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="finish">Finish</string>
    <string name="recent">Previous Session</string>
    <string name="current">Current Session</string>
    <string name="bullet">•</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">----- Sign Up -----</string>
    <string name="register">Register</string>
    <string name="forgotpw">Forgot Password?</string>
    <string name="resetpw">Reset Password</string>
    <string name="minchar">Minimum 6 characters</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="signout">Sign Out</string>
    <string name="weight_holder">135</string>
    <string name="rep_holder">001</string>
</resources>