<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActiveLift">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/bench"
        android:textColor="?android:textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintVertical_bias="0.29">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:autofillHints="weight"
                android:ems="10"
                android:hint="@string/weight"
                android:inputType="number|numberDecimal"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/x"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextReps"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="reps"
                android:ems="10"
                android:hint="@string/reps"
                android:inputType="number"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/diffRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonEasy"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:checked="false"
                    android:theme="@style/RadioButtonBlue" />

                <RadioButton
                    android:id="@+id/radioButtonNormal"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:checked="true"
                    android:theme="@style/RadioButtonGreen" />

                <RadioButton
                    android:id="@+id/radioButtonHard"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:theme="@style/RadioButtonRed" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDelete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/gray"
                android:clickable="false"
                android:text="@string/delete"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="85dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonFinish"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/sl_purple"
                android:clickable="false"
                android:text="@string/finish"
                android:textColor="@color/gray" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewPreviousTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/recent"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPrevious"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewPrevious"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewPrevious" />

    <TextView
        android:id="@+id/textViewCurrentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/current"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewCurrent"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewCurrent"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewCurrent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPrevious"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:background="@color/gray"
        android:paddingVertical="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCurrent"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:background="@color/gray"
        android:paddingVertical="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewBottomSeek1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBottomSeek2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flat"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewBottomSeek3"
            app:layout_constraintStart_toEndOf="@+id/textViewBottomSeek1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBottomSeek3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incline"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBarSelectThree"
            style="@android:style/Widget.DeviceDefault.SeekBar"
            android:layout_width="151dp"
            android:layout_height="22dp"
            android:max="2"
            android:progress="1"
            android:progressBackgroundTint="@color/sl_purple"
            android:progressBackgroundTintMode="src_over"
            android:progressTint="@color/sl_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/seekBarSelectTwo"
            style="@android:style/Widget.DeviceDefault.SeekBar"
            android:layout_width="151dp"
            android:layout_height="22dp"
            android:max="1"
            android:progress="0"
            android:progressBackgroundTint="?colorPrimaryVariant"
            android:progressBackgroundTintMode="src_over"
            android:progressTint="?colorPrimaryVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewTopSeek1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bb"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTopSeek2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/db"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBarBarType"
            style="@android:style/Widget.DeviceDefault.SeekBar"
            android:layout_width="151dp"
            android:layout_height="22dp"
            android:max="1"
            android:progress="0"
            android:progressBackgroundTint="?colorPrimaryVariant"
            android:progressBackgroundTintMode="src_over"
            android:progressTint="?colorPrimaryVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageViewPreviousSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPreviousTitle"
        app:layout_constraintEnd_toStartOf="@+id/textViewPreviousTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewPreviousTitle"
        app:srcCompat="@drawable/arrow_left_gray" />

    <ImageView
        android:id="@+id/imageViewNextSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPreviousTitle"
        app:layout_constraintStart_toEndOf="@+id/textViewPreviousTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewPreviousTitle"
        app:srcCompat="@drawable/arrow_right_gray" />

</androidx.constraintlayout.widget.ConstraintLayout>